@@ -2,7 +2,7 @@ Source: ghdl
 Section: non-free/electronics
 Priority: optional
 Maintainer: Debian QA Group <packages@qa.debian.org>
-Build-Depends: debhelper (>= 9), gnat, llvm-3.6-dev, clang, zlib1g-dev, libedit-dev, texinfo
+Build-Depends: debhelper (>= 9), gnat, llvm-3.5-dev, clang, zlib1g-dev, libedit-dev, texinfo
 Build-Conflicts: ghdl
 Homepage: https://sourceforge.net/projects/ghdl-updates/
 Vcs-Git: https://github.com/jorisvr/ghdl_debian
