@@ -1,14 +1,17 @@
 ghdl (0.33-1) UNRELEASED; urgency=low
 
+  * QA upload.
+
   [ Joris van Rantwijk ]
   * Unofficial Debian package.
   * New upstream release. (Closes: #573721, #585748, #573885, #584476)
   * Fix building of ghdl for Debian jessie. (Closes: #695303)
   * Switch to LLVM backend instead of GCC. (Closes: #392952)
-  * 
+  * Update homepage to sourceforge.
 
   [ Mateusz Łukasik ]
   * Bump Standards Version to 3.9.6.
+  * Add debian/watch.
 
  -- Joris van Rantwijk <joris@jorisvr.nl>  Sun, 04 Oct 2015 11:08:00 +0200
 
